[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://source/characters/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 55.3104, 17.1028 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0.611633, -0.631821 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="wallCollide" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.264861, 0 )
scale = Vector2( 1.10065, 1 )
rect = Rect2( -50, -75, 100, 75 )
process_parent = true
physics_process_parent = true

[node name="playerDetect" type="Area2D" parent="."]
position = Vector2( 0.375414, -64.1345 )
collision_layer = 2

[node name="playerCollide" type="CollisionShape2D" parent="playerDetect"]
position = Vector2( -0.327461, -16.696 )
shape = SubResource( 2 )

[connection signal="body_entered" from="playerDetect" to="." method="_on_stomped"]
